Bug#20129: ALTER TABLE ... ANALYZE/CHECK/OPTIMIZE/REPAIR PARTITION

Problem was that it did not work with corrupted/crashed tables.

Solution is to disable these commands until WL#4176 is completed